# patchboard-form-producer

./: .gitignore  README.md  check-list.txt  inventory.json  pyproject.toml
docs/conversations/: conversations-track.txt
docs/spec/: filetalk.app.form-producer.spec.v1.json
src/form_producer/: __main__.py  app.py  emitter.py  inbox.py  parser.py
tests/: test_emitter.py  test_inbox.py  test_parser.py
