[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librarian"
version = "0.1.0"
description = "Inspect, edit, save, and index JSON document headers into inventory.json."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "lionscliapp",
  "pyperclip",
]

[project.scripts]
librarian = "librarian.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
