[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "form-producer"
version = "0.1.0"
description = "Turns a textual form-spec DSL into a live Tkinter form and emits Patchboard/FileTalk messages as JSON files into an OUTBOX directory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
form-producer = "form_producer.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
